fix comment popover by keeping action buttons visible when popover is open

--- a/src/styles/TaskModal.module.scss
+++ b/src/styles/TaskModal.module.scss
@@ -214,7 +214,7 @@
       border: 1px solid #dedede;
 
       .date {
-        height: 17px;
+        height: 21px;
       }
 
       .commentHeader {
@@ -227,6 +227,7 @@
         .actions {
           display: none;
           flex-direction: row;
+          max-height: 21px;
 
           font-size: 11px;
           font-weight: 400;
@@ -292,12 +293,12 @@
         }
       }
 
-      &:focus,
+      .commentHeader[data-active="true"],
       &:hover {
         .date {
           display: none;
         }
-        .commentHeader .actions {
+        .actions {
           display: flex;
         }
       }
